alteração de fonts

--- a/src/app/styles/globals/_basic.scss
+++ b/src/app/styles/globals/_basic.scss
@@ -1,7 +1,8 @@
 @use '../utils' as *;
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -12,7 +13,9 @@ img {
   display: block;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   line-height: 1;
   font-weight: 400;
 }
@@ -28,8 +31,9 @@ ul {
 body {
   min-height: 100vh;
   line-height: 1.5;
-  background-color: var(--cl-vdark-blue);
+  background-color: var(--cl-vk-violet);
   color: var(--cl-body);
+  font-family: 'Nunito', sans-serif;
 }
 
 .section {
