--- a/src/app/styles/globals/_variables.scss
+++ b/src/app/styles/globals/_variables.scss
@@ -5,5 +5,6 @@
   --cl-accent: hsl(349, 83%, 45%);
   --cl-md-blue: hsl(213, 38%, 37%);
   --cl-dk-violet: hsl(256, 19%, 16%);
+  --cl-md-violet: hsla(256, 19%, 16%, 0.18);
   --cl-vk-violet: hsl(260, 21%, 5%);
 }
