--- a/src/app/styles/components/_bookForm.scss
+++ b/src/app/styles/components/_bookForm.scss
@@ -9,6 +9,7 @@
   &__form {
     display: grid;
     justify-content: center;
+    gap: rem(60);
 
     &__img {
       border: none;
@@ -85,14 +86,13 @@
         width: 100%;
         height: 1px;
         background-color: var(--cl-dk-violet);
-        margin-bottom: rem(30);
+        margin-top: rem(30);
       }
     }
 
     &__previsao {
       display: grid;
       gap: rem(6);
-      margin-bottom: rem(60);
 
       i {
         margin-right: rem(10);
