--- a/src/app/styles/globals/_layout.scss
+++ b/src/app/styles/globals/_layout.scss
@@ -4,3 +4,8 @@
   width: min(100% - 2rem, 40rem);
   margin-inline: auto;
 }
+
+.main_container {
+  width: min(100% - 2rem, 75rem);
+  margin-inline: auto;
+}
