--- a/src/app/styles/globals/_variables.scss
+++ b/src/app/styles/globals/_variables.scss
@@ -7,4 +7,6 @@
   --cl-dk-violet: hsl(256, 19%, 16%);
   --cl-md-violet: hsla(256, 19%, 16%, 0.18);
   --cl-vk-violet: hsl(260, 21%, 5%);
+  --cl-error: hsl(0, 65%, 51%);
+  --cl-success: hsl(123, 43%, 39%);
 }
