--- a/src/app/styles/globals/_basic.scss
+++ b/src/app/styles/globals/_basic.scss
@@ -70,3 +70,18 @@ body {
     box-shadow: 0 0 0 3px var(--cl-vk-violet), 0 0 0 6px var(--cl-accent);
   }
 }
+
+.alert {
+  color: #fff;
+  padding-block: rem(4);
+  padding-inline: rem(10);
+  margin-top: rem(20);
+}
+
+.alert-error {
+  background: var(--cl-error);
+}
+
+.alert-success {
+  background: var(--cl-success);
+}
