--- a/src/app/styles/globals/_basic.scss
+++ b/src/app/styles/globals/_basic.scss
@@ -37,7 +37,7 @@ body {
   line-height: 1.5;
   background-color: var(--cl-vk-violet);
   color: var(--cl-body);
-  font-family: 'Nunito', sans-serif;
+  font-family: var(--ff-nunito);
 }
 
 .section {
