--- a/src/app/styles/globals/_variables.scss
+++ b/src/app/styles/globals/_variables.scss
@@ -9,4 +9,5 @@
   --cl-vk-violet: hsl(260, 21%, 5%);
   --cl-error: hsl(0, 65%, 51%);
   --cl-success: hsl(123, 43%, 39%);
+  --ff-nunito: 'Nunito', sans-serif;
 }
