--- a/src/app/styles/globals/_variables.scss
+++ b/src/app/styles/globals/_variables.scss
@@ -9,5 +9,6 @@
   --cl-vk-violet: hsl(260, 21%, 5%);
   --cl-error: hsl(0, 65%, 51%);
   --cl-success: hsl(123, 43%, 39%);
+  --cl-backdrop: hsla(0, 0%, 0%, 0.7);
   --ff-nunito: 'Nunito', sans-serif;
 }
