--- a/src/app/styles/utils/_breakpoints.scss
+++ b/src/app/styles/utils/_breakpoints.scss
@@ -2,6 +2,7 @@
 
 // 700px, 960px, 1400px
 $breakpoints-up: (
+  'x-small': f.em(560),
   'medium': f.em(700),
   'large': f.em(960),
   'x-large': f.em(1190),
@@ -15,6 +16,7 @@ $breakpoints-up: (
 
 // 699.98px, 959.98px, 1399.98px
 $breakpoints-down: (
+  'x-small': f.em(559.98),
   'small': f.em(699.98),
   'medium': f.em(959.98),
   'large': f.em(1189.98),
