--- a/src/app/styles/components/_modal.scss
+++ b/src/app/styles/components/_modal.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   background: var(--cl-backdrop);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: none;
