--- a/src/app/styles/components/_modal.scss
+++ b/src/app/styles/components/_modal.scss
@@ -11,6 +11,7 @@
   padding-inline: rem(20);
 
   .modal {
+    box-shadow: inset 0 100px var(--cl-dk-violet);
     justify-self: center;
     align-self: center;
     width: clamp(260px, 70vw, 530px);
@@ -21,11 +22,13 @@
     background-color: var(--cl-vk-violet);
     padding-block: rem(44);
     padding-inline: rem(20);
+    border-radius: rem(6);
 
     &__book_cover {
       width: 130px;
       margin-inline: auto;
       margin-bottom: rem(20);
+      border-radius: rem(6);
     }
 
     &__book_info {
@@ -51,6 +54,28 @@
 
       fieldset {
         display: grid;
+        position: relative;
+
+        &::after {
+          content: '';
+          display: block;
+          height: 28px;
+          width: 2px;
+          background: var(--cl-dk-violet);
+          position: absolute;
+          bottom: 22px;
+          right: -15px;
+          transform: rotate(24deg);
+        }
+      }
+
+      div p {
+        color: var(--cl-white);
+        background: var(--cl-dk-violet);
+        padding-block: rem(8);
+        padding-inline: rem(6);
+        font-size: rem(14);
+        border-radius: rem(4);
       }
 
       input {
