--- a/src/app/styles/components/_bookList.scss
+++ b/src/app/styles/components/_bookList.scss
@@ -16,21 +16,20 @@
     padding-inline: rem(20);
     transition: 0.3s ease;
     display: flex;
-    column-gap: rem(20);
+    gap: rem(20);
     flex-basis: 560px;
     flex-wrap: wrap;
     max-width: 560px;
     border-radius: rem(6);
 
     &__img {
-      width: 156px;
+      width: 160px;
       flex-shrink: 0;
       border-radius: rem(6);
       overflow: hidden;
     }
 
     &__info {
-      padding-block: rem(20);
       display: grid;
       gap: rem(20);
       width: 100%;
@@ -43,6 +42,13 @@
 
       h3 {
         color: var(--cl-white);
+        line-height: rem(24);
+      }
+
+      .book_id {
+        font-size: rem(10);
+        display: block;
+        color: var(--cl-body);
       }
 
       .prevision {
