--- a/src/app/styles/globals/_basic.scss
+++ b/src/app/styles/globals/_basic.scss
@@ -107,7 +107,7 @@ input {
   padding-block: rem(4);
   padding-inline: rem(10);
   margin-top: rem(20);
-  width: max-content;
+  max-width: max-content;
   margin-inline: auto;
 }
 
